<resources>
    <string name="app_name">To Do App</string>
    <string name="password">password</string>
    <string name="email">e-mail</string>
    <string name="login_button_label">Sign In</string>
    <string name="login_text">Sign In!</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="title_activity_basic">BasicActivity</string>

    <string name="add_item">Add New</string>

    <string name="signup_error_message">Check your e-mail or password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Signup successfull. You can now login.</string>
    <string name="password_weak_message">Password must contains at least 6 characters.</string>

    <string name="login_error_message">Check your e-mail or password!</string>
    <string name="login_error_title">Error!</string>

    <string name="action_logout">Log Out</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_item">ItemActivity</string>

    <string name="action_export">Export</string>


    //ItemActivity
    <string name="add_item_btn_text">Create item</string>
    <string name="update_item_btn_text">Update item</string>


    <string name="item_done_text">Done?</string>
    <string name="item_done_hint">Is it done?</string>

    <string name="item_priority_hint">Set the priority</string>

    <string name="item_date_hint">Get your date...</string>

    <string name="item_title_hint">Type your title here...</string>


    <string name="add_image_btn_text">Add new image</string>
    <string name="update_image_btn_text">Update image</string>



    //HEADER ListView
    <string name="header_title">Name</string>
    <string name="header_date">Date</string>
    <string name="header_done">Done?</string>
    <string name="header_priority">Priority</string>

</resources>
