<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kamm.todoapp.MainActivity">
    <item android:id="@+id/add_btn"
        android:title="@string/add_item"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        android:icon="@drawable/ic_baseline_get_app_24px"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@drawable/baseline_power_settings_new_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
