<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kamm.todoapp.ItemActivity"
    tools:showIn="@layout/activity_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/item_title_hint"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:alpha=".3"
        android:background="@android:color/black" />

    <EditText
        android:id="@+id/item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/item_date_hint"
        android:padding="10dp"
        android:clickable="true"
        android:inputType="datetime"
        android:focusable="false"
        />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/item_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/item_priority_hint"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />

        <CheckBox
            android:id="@+id/item_checked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/item_done_hint"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/item_done_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/edit_item_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/create_btn"
            android:text="@string/add_image_btn_text"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/add_item_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/create_btn"
            android:text="@string/add_item_btn_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
